force-app/main/default/objects/Help_Message_Filter__c/Help_Message_Filter__c.object-meta.xml
<CustomObject>
    <description>This object provides the ability to filter records based on specific values and ensure the right help is provided at the right time.</description>
    <label>Help Message Filter</label>
    <nameField>
        <label>Help Message Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Message Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>