force-app/main/default/objects/Help_Message_Filter__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>This is the salesforce field API name</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>