force-app/main/default/objects/Help_Message_Filter__c/fields/Field_Operator__c.field-meta.xml
<CustomField>
    <fullName>Field_Operator__c</fullName>
    <inlineHelpText>This determines if the value you are providing matches or does not match</inlineHelpText>
    <label>Field Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater than or equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less than or equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>