force-app/main/default/objects/Help_Message_Filter__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <inlineHelpText>This is the field value that we are comparing or checking against</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>