force-app/main/default/objects/Help_Message_Filter__c/fields/Help_Message__c.field-meta.xml
<CustomField>
    <fullName>Help_Message__c</fullName>
    <inlineHelpText>This is the specific help message that this filter is being applied against</inlineHelpText>
    <label>Help Message</label>
    <referenceTo>Help_Message__c</referenceTo>
    <relationshipLabel>Help Message Filters</relationshipLabel>
    <relationshipName>Help_Message_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>