force-app/main/default/objects/Help_Message_Filter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>This determines the type of field</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Field</fullName>
                <default>true</default>
                <label>Record Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>